# llm-anthropic-vertex

./: README.md  check_encoded_strings.py  gcloud_setup.py  llm_anthropic.py  llm_anthropic_vertex.py  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
tests/: test_anthropic.py
tests/cassettes/test_anthropic/: test_async_prompt.yaml  test_image_prompt.yaml  test_image_with_no_prompt.yaml  test_prompt.yaml  test_prompt_with_prefill_and_stop_sequences.yaml  test_schema_prompt.yaml  test_schema_prompt_async.yaml  test_thinking_prompt.yaml  test_tools.yaml
