[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-anthropic-vertex"
version = "0.1.0"
description = "LLM access to Anthropic models via Google Vertex AI"
readme = "README.md"
authors = [{name = "Simon Willison"}, {name = "Mat Weldon"}]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "llm>=0.26",
    "anthropic[vertex]>=0.72.0",
]

[tool.setuptools]
py-modules = ["llm_anthropic_vertex", "gcloud_setup"]

[project.urls]
Homepage = "https://github.com/matweldon/llm-anthropic-vertex"

[project.entry-points.llm]
anthropic-vertex = "llm_anthropic_vertex"

[project.scripts]
llm-anthropic-vertex-setup = "gcloud_setup:main"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "pytest-asyncio", "cogapp"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
